# IBF

./: .gitignore  .gitmodules  .lintstagedrc.js  .prettierignore  AGENTS.md  README.md  package-lock.json  package.json  pyrightconfig.json
data/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  databricks.yml  pyproject.toml  python-knip.py
data/data_management/: README.md  batch_convert_geotiff.py  color_images.py  color_images_population.py  fetch_admin_boundary.py  fetch_population_raster.py  population_raster_colorizer.py  population_raster_fetcher.py  upload_admin_boundary.py  upload_country_map_data.py  upload_location_points.py
data/data_management/data_upload/: upload_admin_areas.py  upload_admin_boundary.py  upload_admin_extents.py  upload_glofas_location.py
data/data_management/seed_data_management/: add_population_to_admin_areas.py  batch_convert_geotiff.py  clean_all_processed_admin_areas.py  color_images_population.py  convert_flood_extents_to_png.py  convert_gadm_admin_areas.py  fetch_admin_boundary.py  fetch_gadm_admin_areas.py  fetch_go_data.py  fetch_population_raster.py  generate_mock_glofas_discharge.py  populate_admin_parents.py  populate_ibf_v1_admin_area_parents.py
data/data_management/utils/: admin_area_geojson.py  geo_utils.py  postgis_handler.py
data/deploy/: config.test.env  deploy.sh  parse-env.sh  pipelines_deploy.md
data/pipelines/: README.md  __init__.py  constants.py
data/pipelines/core/: __init__.py  load.py  quality.py
data/pipelines/core_v2/: config_reader.py  data_provider.py  data_submitter.py  fetched_data_object.py  forecast_configs.py  run_forecasts.py  sample.yaml
data/pipelines/drought/: config.yaml  extract.py  forecast.py
data/pipelines/flood/: README.md  compute_alert_extent.py  compute_flood_depth.py  compute_flood_extent.py  constants.py  determine_alerts.py  determine_exposure.py  extract_forecast.py  extract_forecast_data.py  extract_glofas_data.py  forecast.py  resolve_flood_extent.py  settings.py  utils_raster.py
data/pipelines/infra/: __init__.py  admin_boundaries_container.py  alert_admin_aggregation.py  alert_integrity_checks.py  alert_types.py  config_reader.py  data_provider.py  data_source_container.py  data_source_types.py  data_submitter.py  databricks_entry.py  dummy_data.py  environment.py  integrity_checks.py  models.py  run_forecasts.py  template_forecast.py  test_fetch_glofas.py
data/pipelines/infra/configs/: drought.yaml  floods.yaml  tropical-cyclone.yaml  tropicalCyclone.yaml
data/pipelines/infra/data_types/: admin_area_types.py  alert_types.py  data_config_types.py  dtos.py  enums.py  flood_extent_provider.py  glofas_discharge_provider.py  loaded_data_types.py  location_point.py
data/pipelines/infra/infra_utils/: admin_boundaries_container.py  data_provider_fetchers.py  dummy_data.py  geojson_admin_boundaries.py  location_point.py
data/pipelines/infra/utils/: alert_admin_aggregation.py  alert_integrity_checks.py  api_client.py  data_provider_fetchers.py  dummy_data.py  exposure.py  infra_mock_generator.py  nrw_logger.py  path_helpers.py  raster.py  raster_utils.py  scenario_alert_generator.py  storage_helpers.py
data/pipelines/legacy/: pipeline.py
data/pipelines/legacy/core/: data.py  load.py  module.py  settings.py
data/pipelines/legacy/drought/: __init__.py  data.py  extract.py  forecast.py  load.py  module.py  pipeline.py
data/pipelines/legacy/riverflood/: data.py  extract.py  forecast.py  load.py  module.py  pipeline.py  scenarios.py
data/pipelines/riverflood/: forecast.py  load.py  pipeline.py
data/pipelines/test/: conftest.py
data/pipelines/test/integration/: conftest.py  test_drought.py  test_drought_api.py  test_drought_local.py  test_drought_pipeline.py  test_flood_pipeline.py  test_floods.py  test_floods_api.py  test_floods_local.py
data/pipelines/test/integration_api/: conftest.py  test_drought_pipeline_api.py  test_flood_pipeline_api.py
data/pipelines/test/integration_infra/: conftest.py  test_drought.py  test_drought_pipeline.py  test_flood_pipeline.py  test_floods.py  test_tropical_cyclone.py
data/pipelines/test/integration_infra_api/: conftest.py  test_drought_pipeline_api.py  test_flood_pipeline_api.py
data/pipelines/test/integration_pipeline/: conftest.py  test_drought.py  test_floods.py
data/pipelines/test/unit/: test_alert_admin_aggregation.py  test_api_client.py  test_clip_raster_to_admin_areas.py  test_crop_to_hazard_bounds.py  test_data_submitter_integrity.py  test_data_submitter_output.py  (+9 more)
data/pipelines/tropical-cyclone/: forecast.py
data/pipelines/tropical_cyclone/: README.md  __init__.py  compute_wind_extent.py  constants.py  determine_alerts.py  determine_exposure.py  extract_forecast.py  extract_track.py  forecast.py
data/pipelines/v2/: README.md
data/scripts/: admin_boundary_fetcher.py  go_data_fetcher.py  population_raster_colorizer.py  population_raster_fetcher.py
data/scripts/shared/: data_helpers.py  download_helpers.py
data/shared/: country_data.py  data_helpers.py  download_helpers.py  image_helpers.py  match_station_basin.py
data/test/: conftest.py  test_pipeline_v2.py
data/test/integration/: conftest.py  test_drought_pipeline.py  test_flood_pipeline.py
data/test/legacy/: test_pipeline_integration.py
data/test/unit/: test_data_submitter_integrity.py
e2e/: env.ts  (+8 more)
pipelines/: .env.example  README.md  pipeline.py  pyproject.toml  uv-sync.sh
pipelines/config/: riverflood.yaml
pipelines/pipelines/core/: README.md  data.py  image_helpers.py  load.py  module.py  quality.py  secrets.py  settings.py
pipelines/pipelines/drought/: __init__.py  config.yaml  data.py  extract.py  forecast.py  load.py  module.py  pipeline.py  utils.py
pipelines/pipelines/riverflood/: __init__.py  config.yaml  data.py  extract.py  forecast.py  load.py  module.py  pipeline.py  scenarios.py
(+485 files in other folders)
