[project]
name = "pipelines"
version = "0.1.0"
description = "Forecast hazards impact on people and assets."
authors = [{ name = "IBF", email = "ibf-devops@redcross.nl" }]
requires-python = ">=3.12,<4"
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "cfgrib",
    "click",
    "netCDF4",
    "numpy",
    "pillow",
    "psycopg[binary]",
    "pydantic",
    "PyYAML",
    "python-dotenv",
    "rasterio",
    "rasterstats>=0.20.0",
    "requests",
    "scipy",
    "shapely",
    "xarray",
]

[project.scripts]
pipeline = "pipelines.infra.run_forecasts:main"

[project.urls]
Homepage = "https://github.com/rodekruis/IBF/tree/main/pipelines"

[tool.hatch.build.targets.sdist]
include = [
    "pipelines",
    "shared",
]

[tool.hatch.build.targets.wheel]
include = [
    "pipelines",
    "shared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "deptry",
    "pyright",
    "ufmt>=2.9.1",
    "pytest",
    "ruff",
    "vulture",
]

[tool.deptry]
known_first_party = ["pipelines", "data_management", "shared"]
per_rule_ignores = { DEP002 = ["cfgrib", "netCDF4", "scipy", "rasterstats", "shapely", "xarray"], DEP004 = ["pytest"] }
